package iu.piisj.facilitymanager.ticket;

public enum TicketCategory {
    HEIZUNG,
    ELEKTRO,
    SANITAER,
    IT,
    SONSTIGES
}
