package iu.piisj.facilitymanager.ticket;

public enum TicketPriority {
    NIEDRIG,
    MITTEL,
    HOCH,
    KRITISCH
}
