package iu.piisj.facilitymanager.ticket;

public enum TicketStatus {
    OFFEN,
    IN_BEARBEITUNG,
    ERLEDIGT,
    ABGELEHNT
}
