package iu.piisj.facilitymanager.user;

public enum UserRole {
    ADMIN,
    TECHNICIAN,
    REPORTER
}
